--- a/Python Advaned_4.ipynb
+++ b/Python Advaned_4.ipynb
@@ -13,17 +13,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbf84921-2e0e-400e-ac6f-26d85e75652e",
+   "id": "3266a209-5bbc-44b1-b8f1-7869df2029fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "In Python, overloading is achieved by overriding the method which is specifically for that operator, in the user-defined class. For example, __add__(self, x) is a method reserved for overloading + operator, and __eq__(self, x) is for overloading == ."
+    "Ans: __iter__ and __next__ are the operator overloading methods in python that support iteration and are collectively called iterator protocol.\n",
+    "\n",
+    "__iter__ returns the iterator object and is called at the start of loop in our respective class.\n",
+    "__next__ is called at each loop increment, it returns the incremented value. Also Stopiteration is raised when there is no value to return."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7912b906-7f7c-417f-9ece-577b8d358113",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 6 7 8 9 10 11 12 13 14 15 "
+     ]
+    }
+   ],
+   "source": [
+    "class Counter:\n",
+    "    def __init__(self,low,high):\n",
+    "        self.current = low\n",
+    "        self.high = high\n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "    def __next__(self):\n",
+    "        if self.current > self.high:\n",
+    "            raise StopIteration\n",
+    "        else:\n",
+    "            self.current += 1\n",
+    "            return self.current - 1\n",
+    "for ele in Counter(5,15):\n",
+    "    print(ele, end=\" \")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0fa73cd-b8fb-4b52-bcf7-78be3bfe478a",
+   "id": "d354661c-dae0-43c6-b5c8-eba421bde714",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,11 +67,68 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "395561b6-0ab3-4791-a1fb-c66fff97a8d1",
+   "id": "41e3853b-cb6a-4012-8473-081c5525254f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Operator overloading is the ability to change the behavior of operators when used with user-defined classes or objects."
+    "Ans: __str__ and __repr__ are two operator overloading methods that manage printing.\n",
+    "\n",
+    "In Short, the difference between both these operators is the goal of __repr__ is to be unambiguous and __str__ is to be readable.\n",
+    "Whenever we are printing any object reference internally __str__ method will be called by default.\n",
+    "The main purpose of __str__ is for readability. it prints the informal string representation of an object, one that is useful for printing the object. it may not be possible to convert result string to original object.\n",
+    "__repr__ is used to print official string representation of an object, so it includes all information and development."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9b96b57e-639a-4670-9074-57aaebbd31bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Student object at 0x7f8f3fe00c40>\n",
+      "Student Name: Mano and Roll No: 1\n",
+      "2023-11-30 18:24:18.890467\n",
+      "Unable to convert back to original object\n",
+      "datetime.datetime(2023, 11, 30, 18, 24, 18, 890467)\n",
+      "2023-11-30 18:24:18.890467\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Student:\n",
+    "    def __init__(self,name,roll_no):\n",
+    "        self.name = name\n",
+    "        self.roll_no = roll_no\n",
+    "        \n",
+    "s1 = Student(\"Mano\",1)\n",
+    "print(str(s1))\n",
+    "\n",
+    "class Student:\n",
+    "    def __init__(self,name,roll_no):\n",
+    "        self.name = name\n",
+    "        self.roll_no = roll_no\n",
+    "    def __str__(self):\n",
+    "        return f'Student Name: {self.name} and Roll No: {self.roll_no}'\n",
+    "    \n",
+    "s1 = Student(\"Mano\",1)\n",
+    "print(str(s1))\n",
+    "\n",
+    "import datetime\n",
+    "today = datetime.datetime.now()\n",
+    "\n",
+    "s = str(today) # converting datetime object to presentable str\n",
+    "print(s)\n",
+    "try: d = eval(s) # converting str back to datetime object\n",
+    "except: print(\"Unable to convert back to original object\")\n",
+    "    \n",
+    "u = repr(today) # converting datetime object to str\n",
+    "print(u)\n",
+    "e = eval(u) # converting str back to datetime object\n",
+    "print(e)"
    ]
   },
   {
@@ -53,11 +144,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9b6e97a-040d-4946-a9e9-a1f055c327b1",
+   "id": "d18724a1-6e0e-436f-9c41-6411a3203119",
    "metadata": {},
    "outputs": [],
    "source": [
-    "To slice a sequence, you can use square brackets [] with the start and end indices separated by a colon."
+    "Ans: In a class use of slice() in __getitem__ method is used for intercept slice operation. This slice method is provided with start integer number, stop integer number and step integer number.\n",
+    "\n",
+    "Example: __getitem__(slice(start,stop,step))"
    ]
   },
   {
@@ -73,21 +166,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acb8cb2a-10d5-44f3-8502-a35e288a6fb9",
+   "id": "1bfe5f9b-0252-4c7a-a3fb-60785e29e0c2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Python provides the operator x += y to add two objects in-place by calculating the sum x + y and assigning the result to the first operands variable name x . You can set up the in-place addition behavior for your own class by overriding the magic “dunder” method __iadd__(self, other) in your class definition."
+    "Ans: a+b is normal addition. Whereas a+=b is inplace addition operation. In this in-place addition a itself will store the value of addition. In a class __iadd__ method is used for this in-place operation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5c894421-2e0e-4e0d-bb83-a63d79f93d28",
+   "execution_count": 3,
+   "id": "16901431-4cb0-4c69-88fb-7a519fdb36bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300\n"
+     ]
+    }
+   ],
    "source": [
-    "The iadd(x, y) operator performs an in-place addition operation. It updates the value of the variable with the result. It is represented by the += symbol. The above code demonstrates how to perform in-place addition."
+    "class Book:\n",
+    "    def __init__(self,pages):\n",
+    "        self.pages = pages\n",
+    "    def __iadd__(self,other):\n",
+    "        self.pages += other.pages\n",
+    "        return self.pages\n",
+    "        \n",
+    "b1 = Book(100)\n",
+    "b2 = Book(200)\n",
+    "b1+=b2\n",
+    "print(b1)"
    ]
   },
   {
@@ -103,25 +214,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b73356c7-4948-4be8-a493-0fedb74c83e4",
+   "id": "0093c5a5-0711-4539-bf95-7f55055f5d47",
    "metadata": {},
    "outputs": [],
    "source": [
-    "There are several reasons to use operator overloading in Python: It allows programmers to use built-in operators with user-defined objects, making code more expressive and concise. It can simplify code by allowing complex operations to be expressed in a single line of code."
+    "Ans: Operator overloading is used when we want to use an operator other than its normal operation to have different meaning according to the context required in user defined function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "02a501ce-5e68-4c6e-b2d9-4fbc4f63f7fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Number of Pages -> 300\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Book:\n",
+    "    def __init__(self,pages):\n",
+    "        self.pages = pages\n",
+    "    def __add__(self,other):\n",
+    "        return self.pages+other.pages\n",
+    "b1 = Book(100)\n",
+    "b2 = Book(200)\n",
+    "print(f'Total Number of Pages -> {b1+b2}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0093c5a5-0711-4539-bf95-7f55055f5d47",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02a501ce-5e68-4c6e-b2d9-4fbc4f63f7fd",
+   "id": "3c68dfbd-dfac-4e55-8c91-2c5a337bc7c8",
    "metadata": {},
    "outputs": [],
    "source": []
